fix: update settings PUT endpoint path
